--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
-}
+} */
 
 
 #stage {
@@ -23,7 +23,7 @@
     left: 20px;
     top: 20px;
     position: relative;
-    animation: animationDrillTest 20s infinite;
+    animation: animationDrillTest 17s infinite;
 }
 
 
@@ -32,49 +32,45 @@
     0% {
     left: 20px;
     }
-    20% {
+    29% {
     top:20px;
     left: 500px;
-    border-color: red;
+    border-radius: 0;
     }
-    40% {
+    41% {
     top:200px;
     left: 500px;
     transform: rotate(0deg);
-    border-color: red;
     }
-    50% {
+    44.1% {
     top: 200px;
     left: 265px;
-    transform: rotate(44deg);
-    border-color: red;
+    transform: rotate(45deg);
     }
-    55% {
+    55.86% {
     top: 200px;
     left: 265px;
-    transform: rotate(44deg);
+    transform: rotate(45deg);
     border-color: red;
+    border-radius: 0;
     }
-    60% {
+    70.96% {
     top: 200px;
     left: 20px;
     transform: rotate(0deg);
     width: 75px;
     height: 75px;
-    background: radial-gradient(circle closest-side at center, transparent, transparent);
+    border-radius: 0px;
     border-color: blue;
+    background: none;
     }
-    /* 70% {
-    border-color: red;
-    background: radial-gradient(circle closest-side at center, transparent, transparent);
-    border-radius: 5px;
-    } */
-    80%, 100% {
+    100% {
     top: 440px;
     left: 445px;
     width: 150px;
     height: 150px;
-    background: radial-gradient(circle closest-side at center, #FBDA61 0, #F76B1C 100%, transparent);
     border-color: transparent;
+    background: radial-gradient(circle closest-side at center, #FBDA61 0, #F76B1C 100% );
+    border-radius: 150px;
     }
 };
